--- a/first-angular-app/src/app/employeelist/employee-count/employee-count.component.html
+++ b/first-angular-app/src/app/employeelist/employee-count/employee-count.component.html
@@ -1,9 +1,9 @@
 <span class="radioClass">Show:</span>
-<input type="radio" name="options"/>
+<input type="radio" name="options" value="All" [(ngModel)]="selectedRadioButtonValue" (change)="onRadionButtonSelectionChange()"/>
 <span class="radioClass">All({{all}})</span>
 
-<input type="radio" name="options"/>
+<input type="radio" name="options" value="Male" [(ngModel)]="selectedRadioButtonValue" (change)="onRadionButtonSelectionChange()"/>
 <span class="radioClass">Male({{male}})</span>
 
-<input type="radio" name="options"/>
+<input type="radio" name="options" value="Female" [(ngModel)]="selectedRadioButtonValue" (change)="onRadionButtonSelectionChange()"/>
 <span class="radioClass">Female({{female}})</span>
