--- a/first-angular-app/src/app/app.component.html
+++ b/first-angular-app/src/app/app.component.html
@@ -1,29 +1,9 @@
-<!--The content below is only a placeholder and can be replaced.
-<div style="text-align:center">
-  <h1>
-    {{ pageHeader }}!
-  </h1>
 
-
-<name:<input [value]="name" (input)='name=$event.target.value'/> 
-
-name : <input [(ngModel)]="name"/>
-
-<br/>
-
-You entered: {{name}}
-
-
-
-  <img [src]="imagePath" height="60px"/>
-
-  <button (click)="onClick()">Click Me</button>
-  <br/>
-  <br/>
-  <button on-click="onClick()">Click Me</button>
-   <button [disabled]='isDisabled'> click me</button> 
+<!-- <app-employeelist></app-employeelist> -->
+<div style="padding:5px">
+  <ul class="nav nav-tabs">
+    <li><a routerLinkActive="active" routerLink="home">Home</a></li>
+    <li><a routerLinkActive="active"  routerLink="employees">Employees</a></li>
+  </ul>
+  <router-outlet></router-outlet>
 </div>
-
-<app-employee></app-employee>-->
-<app-employeelist></app-employeelist>
-
