--- a/first-angular-app/src/app/employee/employee.component.html
+++ b/first-angular-app/src/app/employee/employee.component.html
@@ -5,8 +5,8 @@
         <th scope="col">#</th>
         <th scope="col">First Name</th>
         <th scope="col">Last Name</th>
-        <th scope="col" *ngIf="showDetails" >Gender</th>
-        <th scope="col" *ngIf="showDetails">Age</th>
+        <th scope="col"  >Gender</th>
+        <th scope="col">Age</th>
       </tr>
     </thead>
     <tbody>
@@ -14,12 +14,10 @@
         <td>1</td>
         <td>{{firstName}}</td>
         <td>{{lastName}}</td>
-        <td *ngIf="showDetails">{{gender}}</td>
-        <td *ngIf="showDetails">{{age}}</td>
+        <td >{{gender}}</td>
+        <td >{{age}}</td>
       </tr>
     </tbody>
   </table>
   <br/>
-  <button on-click="toggleDetails()">
-    {{showDetails?'Hide':'Show'}} Details</button>
 </div>
